Update UserServiceTest.java
#92